# open-note

./: .gitignore  .prettierignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.build.json  vitest-results.json  vitest.config.ts
.claude/commands/: commit.md  fix.md  planejamento.md  refactor-react.md  refactor-rust.md  review.md  validate.md
.github/workflows/: ci.yml  gh-pages.yml  release.yml
.windsurf/: memories.md
.windsurf/workflows/: commit.md  fix.md  planejamento.md  refactor-react.md  refactor-rust.md  validate.md
crates/core/: Cargo.toml
crates/core/bindings/: SpellCheckMatch.ts  SpellCheckRequest.ts  SpellCheckResponse.ts
crates/core/src/: annotation.rs  block.rs  color.rs  error.rs  id.rs  lib.rs  notebook.rs  page.rs  section.rs  settings.rs  spellcheck.rs  template.rs  trash.rs  workspace.rs
crates/search/: Cargo.toml
crates/search/src/: engine.rs  error.rs  extract.rs  lib.rs  schema.rs
crates/search/tests/: integration.rs
crates/storage/: Cargo.toml
crates/storage/src/: atomic.rs  encryption.rs  engine.rs  error.rs  lib.rs  lock.rs  migrations.rs  slug.rs
crates/storage/tests/: canvas_page_test.rs  integration_test.rs  migration_test.rs  password_protection.rs  template_storage.rs
crates/storage/tests/fixtures/: page_corrupted.opn.json  page_v1.opn.json
crates/storage/tests/fixtures/workspace_v1/: workspace.json
crates/storage/tests/fixtures/workspace_v1/estudos/: notebook.json
crates/storage/tests/fixtures/workspace_v1/estudos/aulas/: section.json
crates/sync/: Cargo.toml  build.rs
crates/sync/src/: coordinator.rs  error.rs  lib.rs  manifest.rs  oauth_server.rs  provider.rs  token_store.rs  types.rs
crates/sync/src/providers/: dropbox.rs  google_drive.rs  mod.rs  onedrive.rs
docs/: ARCHITECTURE.md  BUILD_AND_DEPLOY.md  DATA_MODEL.md  DEVELOPMENT.md  FASE_01.md  FASE_02.md  FASE_03.md  FASE_04.md  FASE_05.md  FASE_06.md  FASE_07.md  FASE_08.md  FASE_09.md  FASE_10.md  GLOSSARY.md  IPC_REFERENCE.md  OAUTH_SETUP.md  README.md  SYSTEM_DESIGN.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE_MULTI_WORKSPACE.md
docs/adr/: 001-tauri-v2.md  002-cargo-workspace.md  003-tiptap-editor.md  004-tantivy-search.md  005-zustand-state.md  006-theme-system.md  007-local-first.md  008-ink-hybrid.md  009-i18n-strategy.md
docs/excalidraw_integration/: fase_01.md  fase_02.md  fase_03.md  fase_04.md  fase_05.md  roadmap.md
docs/home_page_improvements/: fase_01.md  fase_02.md  fase_03.md  roadmap.md
docs/multiple_workspace/: MIGRATION.md  fase_01.md  fase_02.md  fase_03.md  fase_04.md  fase_05.md  fase_06.md  fase_07.md  fase_08.md  roadmap.md
docs/note_templates/: fase_01.md  fase_02.md  fase_03.md  roadmap.md
docs/password_protected_notes/: fase_01.md  fase_02.md  fase_03.md  fase_04.md  roadmap.md
docs/pdf-canvas/: fase_01.md  fase_02.md  fase_03.md  fase_04.md  fase_05.md  fase_06.md  fase_07.md  overview.md
docs/redesign_plataforma/: fase_00.md  fase_01.md  fase_02.md  fase_03.md  fase_04.md  fase_05.md  roadmap.md
docs/retrofit_react/: fase_01.md  fase_02.md  fase_03.md  fase_04.md  fase_05.md  fase_06.md  fase_07.md  fase_08.md  roadmap.md
docs/superpowers/plans/: 2026-04-15-fase1-editor-performance.md  2026-04-15-fase3-tech-debt.md  (+2 more)
e2e/: canvas-page.spec.ts  fase-01-initialization.spec.ts  fase-02-local-management.spec.ts  fase-03-ui-shell.spec.ts  fase-04-rich-text-editor.spec.ts  fase-05-advanced-blocks.spec.ts  fase-06-markdown-mode.spec.ts  fase-07-ink-pdf.spec.ts  fase-08-search.spec.ts  fase-09-cloud-sync.spec.ts  fase-10-settings-themes.spec.ts  multi-workspace.spec.ts  password-protection.spec.ts
e2e/fixtures/: index.ts
e2e/helpers/: ipc-mock.ts  selectors.ts  workspace.ts
retrofit_e2e/: fase_01.md  fase_02.md  fase_03.md  fase_04.md  fase_05.md  fase_06.md  fase_07.md  fase_08.md  fase_09.md  fase_10.md  roadmap.md
retrofit_test_rust/: phase_1_core_domain.md  phase_2_storage_engine.md  phase_3_search_engine.md  phase_4_sync.md  phase_5_tauri_api.md  roadmap.md
scripts/: bump-version.sh
site/: index.html  privacy.html  terms.html
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: assets.rs  mod.rs  notebook.rs  page.rs  page_test.rs  search.rs  section.rs  spellcheck.rs  sync.rs  tags.rs  template.rs  trash.rs  workspace.rs
src/hooks/: useAutoSave.ts  useFocusedWorkspace.ts  useKeyboardShortcuts.ts  useWorkspaceList.ts
src/lib/: builtinTemplates.ts  i18n.ts  ipc.ts  markdown.ts  serialization.ts  theme.ts
src/locales/: en.json  pt-BR.json
src/stores/: useAnnotationStore.ts  useMultiWorkspaceStore.ts  useNavigationStore.ts  usePageStore.ts  useTemplateStore.ts  useUIStore.ts  useWorkspaceStore.ts
src/styles/: globals.css  interactive.css
src/test/: setup.ts
src/types/: search.ts  spellcheck.ts  sync.ts
(+513 files in other folders)
