[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/storage",
  "crates/search",
  "crates/sync",
  "src-tauri",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
ts-rs = { version = "10", features = ["serde-compat", "chrono-impl", "uuid-impl"] }
