[package]
name = "open-note"
version = "0.1.0"
edition = "2021"
description = "Open Note — local-first note-taking app"

[lib]
name = "open_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
opennote-core = { path = "../crates/core" }
opennote-storage = { path = "../crates/storage" }
opennote-search = { path = "../crates/search" }
opennote-sync = { path = "../crates/sync" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
lopdf = "0.34"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
