[package]
name = "opennote-search"
version = "0.1.0"
edition = "2021"
description = "Open Note full-text search engine (Tantivy)"

[dependencies]
opennote-core = { path = "../core" }
tantivy = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
