[package]
name = "opennote-storage"
version = "0.1.0"
edition = "2021"
description = "Open Note filesystem storage engine"

[dependencies]
opennote-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
