[package]
name = "opennote-storage"
version = "0.1.0"
edition = "2021"
description = "Open Note filesystem storage engine"

[dependencies]
opennote-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
