[package]
name = "opennote-sync"
version = "0.1.0"
edition = "2021"
description = "Open Note cloud sync engine"

[dependencies]
opennote-core = { path = "../core" }
opennote-storage = { path = "../storage" }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "time", "sync", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
log = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "fs"] }
